2008-02-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.c: use a different cursor when
	dragging, just like GimpScrolledPreview.

2008-02-26  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpchainbutton.c: use event boxes without
	visible window instead of drawing areas for the lines besides the
	button. Fixes the background which was drawn wrongly for many
	themes.

2008-02-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.[ch]: derive from GtkEventBox and
	draw on the parent window.

	* plug-ins/print/print-page-layout.c: tweaked dialog layout.

2008-02-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/Makefile.am
	* plug-ins/print/print-utils.[ch]: added new files with utility
	functions.

	* plug-ins/print/print-settings.c: use the new utility
	functions for loading and saving GKeyFile.

	* plug-ins/print/print-page-setup.[ch]
	* plug-ins/print/print.c: also store the page setup in an image
	parasite. Fixes most of what remained to be done for bug #513291.

2008-02-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-settings.[ch]
	* plug-ins/print/print.c: code cleanup.

2008-02-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (end_print): use g_timeout_add_seconds().

2008-02-24  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c: removed default keyboard shortcuts
	from actions that work with named buffers. Use Ctrl-Shift-V as the
	default keyboard shortcut for "Paste As New Image" and
	Ctrl-Shift-C for "Copy Visible".

2008-02-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (print_image): added missing call to
	gtk_print_operation_set_unit().

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: use GTK_STOCK_PAGE_SETUP when compiled
	against GTK+ >= 2.13.0.

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c: added support for grayscale
	images so we don't need to go through an extra export step.
